Closed
Bug 107766
Opened 24 years ago
Closed 24 years ago
DeactivateEntry: bad cache entry state when quitting
Categories
(Core :: Networking: Cache, defect, P1)
Tracking
()
VERIFIED
FIXED
mozilla0.9.9
People
(Reporter: jesup, Assigned: gordon)
Details
(Whiteboard: patch)
Attachments
(2 files)
|
28.87 KB,
text/plain
|
Details | |
|
718 bytes,
patch
|
gagan
:
review+
gordon
:
superreview+
|
Details | Diff | Splinter Review |
Mozilla 20011030xx
Got "DeactivateEntry: bad cache entry state" warning while quitting. Looking at
the code, I'm not suprised: DeactivateAndClearEntry() marks it inactive, then
DeactivateEntry() says if (doomed) {...} else if (active) {...} else {Warn}.
However, it can't be doomed because nsCacheService::Shutdown() cleared the
doomed list before calling ClearActiveEntries().
GDB dumps/traces to be attached.
| Reporter | ||
Comment 1•24 years ago
|
||
Targeting for necko stability milestone 0.9.8.
Target Milestone: --- → mozilla0.9.8
Comment on attachment 69575 [details] [diff] [review]
Change NS_WARNING to NS_ASSERTION that doesn't fire if we're shutting down.
sr=darin
Attachment #69575 -
Flags: superreview+
Comment on attachment 69575 [details] [diff] [review]
Change NS_WARNING to NS_ASSERTION that doesn't fire if we're shutting down.
r=gagan
Attachment #69575 -
Flags: review+
Patch checked in. Marking FIXED.
Status: NEW → RESOLVED
Closed: 24 years ago
Resolution: --- → FIXED
You need to log in
before you can comment on or make changes to this bug.
Description
•