Fix bug 107766 "DeactivateEntry: bad cache entry state when quitting".  The cache entry state is legitimate on shutdown.  Change NS_WARNING to NS_ASSERTION that doesn't fire on shutdown. r=gagan, sr=darin.